The division of the project into drivers has been prepared

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "keywords": [
         "bank",
         "billing",
-        "cashier"
+        "cashier",
+        "sber",
+        "tinkoff"
     ],
     "authors": [
         {
@@ -20,8 +22,13 @@
     },
     "require": {
         "php": "^7.2.5|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0",
-        "guzzlehttp/guzzle": "^6.5|^7.0"
+        "andrey-helldar/cashier-sber": "dev-main",
+        "andrey-helldar/cashier-tinkoff": "dev-main",
+        "andrey-helldar/support": "^3.18",
+        "guzzlehttp/guzzle": "^6.5|^7.0",
+        "illuminate/contracts": "^6.0|^7.0|^8.0",
+        "illuminate/database": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
@@ -39,10 +46,31 @@
             "Tests\\": "tests"
         }
     },
+    "suggest": {
+        "andrey-helldar/cashier-sber": "AAA",
+        "andrey-helldar/cashier-tinkoff": "BBB"
+    },
     "config": {
         "preferred-install": "dist",
         "sort-packages": true
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Helldar\\Cashier\\ServiceProvider",
+                "Helldar\\Cashier\\Providers\\ObserverServiceProvider"
+            ]
+        }
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../cashier-sber"
+        }, {
+            "type": "path",
+            "url": "../cashier-tinkoff"
+        }
+    ]
 }
