Code, code, code...

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "guzzlehttp/guzzle": "^6.5|^7.0",
         "illuminate/contracts": "^6.0|^7.0|^8.0",
         "illuminate/database": "^6.0|^7.0|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0"
+        "illuminate/support": "^6.0|^7.0|^8.0",
+        "nesbot/carbon": "^2.0"
     },
     "require-dev": {
         "andrey-helldar/cashier-sber-qr": "dev-main",
