--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "bank",
         "billing",
         "cashier",
-        "qr"
+        "payments",
+        "subscribe"
     ],
     "authors": [
         {
