--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "laravel": {
