--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php": "^7.2.5|^8.0",
         "ext-json": "*",
         "andrey-helldar/support": "^4.0",
+        "andrey-helldar/laravel-support": "^2.0",
         "guzzlehttp/guzzle": "^6.5|^7.0",
         "illuminate/console": "^6.0|^7.0|^8.0",
         "illuminate/contracts": "^6.0|^7.0|^8.0",
