Fixed UriInterface using

--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,15 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "ext-json": "*",
-        "andrey-helldar/support": "^4.0",
         "andrey-helldar/laravel-support": "^2.0",
+        "andrey-helldar/support": "^4.0",
         "guzzlehttp/guzzle": "^6.5|^7.0",
         "illuminate/console": "^6.0|^7.0|^8.0",
         "illuminate/contracts": "^6.0|^7.0|^8.0",
         "illuminate/database": "^6.0|^7.0|^8.0",
         "illuminate/support": "^6.0|^7.0|^8.0",
-        "nesbot/carbon": "^2.0"
+        "nesbot/carbon": "^2.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "andrey-helldar/cashier-sber-qr": "dev-main",
