--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "illuminate/database": "^6.0|^7.0|^8.0",
         "illuminate/support": "^6.0|^7.0|^8.0",
         "nesbot/carbon": "^2.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "ramsey/uuid": "^3.7|^4.0"
     },
     "require-dev": {
         "andrey-helldar/cashier-sber-qr": "dev-main",
