--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "illuminate/support": "^6.0|^7.0|^8.0",
         "nesbot/carbon": "^2.0",
         "psr/http-message": "^1.0",
-        "ramsey/uuid": "^3.7|^4.0"
+        "ramsey/uuid": "^3.7|^4.0",
+        "symfony/http-kernel": "^4.0|^5.0"
     },
     "require-dev": {
         "andrey-helldar/cashier-sber-qr": "dev-main",
