--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "ext-json": "*",
-        "andrey-helldar/contracts": "^1.4",
+        "andrey-helldar/contracts": "^1.4.5",
         "andrey-helldar/laravel-support": "^2.0",
         "andrey-helldar/support": "^4.2",
         "guzzlehttp/guzzle": "^6.5|^7.0",
@@ -34,12 +34,12 @@
         "nesbot/carbon": "^2.0",
         "psr/http-message": "^1.0",
         "ramsey/uuid": "^3.7|^4.0",
-        "symfony/http-kernel": "^4.0|^5.0"
+        "symfony/http-kernel": "^4.3.4|^5.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
+        "orchestra/testbench": "^6.0|^7.0|^8.0",
         "phpunit/phpunit": "^9.0",
-        "symfony/var-dumper": "^4.0|^5.0"
+        "symfony/var-dumper": "^4.3.4|^5.0"
     },
     "autoload": {
         "psr-4": {
