--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "ext-json": "*",
-        "andrey-helldar/contracts": "^1.4.5",
+        "andrey-helldar/contracts": "^1.4.6",
+        "andrey-helldar/simple-data-transfer-object": "^1.0",
         "andrey-helldar/laravel-support": "^2.0",
         "andrey-helldar/support": "^4.2",
         "guzzlehttp/guzzle": "^6.5|^7.0",
@@ -37,13 +38,14 @@
         "symfony/http-kernel": "^4.3.4|^5.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0|^7.0|^8.0",
+        "orchestra/testbench": "^4.0|^5.0|^6.0",
         "phpunit/phpunit": "^9.0",
         "symfony/var-dumper": "^4.3.4|^5.0"
     },
     "autoload": {
         "psr-4": {
-            "Helldar\\Cashier\\": "src"
+            "Helldar\\Cashier\\": "src",
+            "Helldar\\Contracts\\": "contracts"
         }
     },
     "autoload-dev": {
@@ -59,14 +61,20 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "laravel": {
             "providers": [
-                "Helldar\\Cashier\\ServiceProvider",
+                "Helldar\\Cashier\\Providers\\ServiceProvider",
                 "Helldar\\Cashier\\Providers\\ObserverServiceProvider"
             ]
         }
-    }
+    },
+    "repositories": [
+        {"type": "path", "url": "../cashier-sber-qr"},
+        {"type": "path", "url": "../cashier-sber-auth"},
+        {"type": "path", "url": "../cashier-tinkoff-qr"},
+        {"type": "path", "url": "../cashier-tinkoff-auth"}
+    ]
 }
