--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,12 @@
         "andrey-helldar/contracts": "^1.4.6",
         "andrey-helldar/simple-data-transfer-object": "^1.0",
         "andrey-helldar/laravel-support": "^2.0",
-        "andrey-helldar/support": "^4.2",
+        "andrey-helldar/support": "^4.4",
         "guzzlehttp/guzzle": "^6.5|^7.0",
         "illuminate/console": "^6.0|^7.0|^8.0",
         "illuminate/contracts": "^6.0|^7.0|^8.0",
         "illuminate/database": "^6.0|^7.0|^8.0",
         "illuminate/support": "^6.0|^7.0|^8.0",
-        "nesbot/carbon": "^2.0",
         "psr/http-message": "^1.0",
         "ramsey/uuid": "^3.7|^4.0",
         "symfony/http-kernel": "^4.3.4|^5.0"
@@ -44,8 +43,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Helldar\\Cashier\\": "src",
-            "Helldar\\Contracts\\": "contracts"
+            "Helldar\\Cashier\\": "src"
         }
     },
     "autoload-dev": {
