--- a/.styleci.yml
+++ b/.styleci.yml
@@ -16,6 +16,9 @@ enabled:
     - cast_spaces
     - combine_consecutive_issets
     - const_separation
+    - const_visibility_required
+    - declare_equal_normalize
+    - declare_strict_types
     - dir_constant
     - fully_qualified_strict_types
     - logical_operators
