--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ end_of_line = lf
 indent_size = 4
 indent_style = space
 insert_final_newline = true
-max_line_length = 160
+max_line_length = 180
 tab_width = 4
 trim_trailing_whitespace = true
 ij_continuation_indent_size = 8
@@ -37,6 +37,13 @@ ij_css_space_after_colon = true
 ij_css_space_before_opening_brace = true
 ij_css_use_double_quotes = true
 ij_css_value_alignment = do_not_align
+
+[*.csv]
+max_line_length = 2147483647
+ij_csv_wrap_long_lines = false
+
+[*.dart]
+max_line_length = 80
 
 [*.haml]
 indent_size = 2
@@ -317,6 +324,7 @@ ij_shell_keep_column_alignment_padding = false
 ij_shell_minify_program = false
 ij_shell_redirect_followed_by_space = false
 ij_shell_switch_cases_indented = false
+ij_shell_use_unix_line_separator = true
 
 [{*.cjs,*.js}]
 ij_continuation_indent_size = 4
@@ -659,7 +667,7 @@ ij_php_space_before_while_parentheses = true
 ij_php_space_between_ternary_quest_and_colon = false
 ij_php_spaces_around_additive_operators = true
 ij_php_spaces_around_arrow = false
-ij_php_spaces_around_assignment_in_declare = true
+ij_php_spaces_around_assignment_in_declare = false
 ij_php_spaces_around_assignment_operators = true
 ij_php_spaces_around_bitwise_operators = true
 ij_php_spaces_around_equality_operators = true
@@ -753,7 +761,7 @@ ij_markdown_min_lines_around_block_elements = 1
 ij_markdown_min_lines_around_header = 2
 ij_markdown_min_lines_between_paragraphs = 1
 
-[{*.yaml,*.yml}]
+[{*.yaml,*.yml,.analysis_options}]
 ij_yaml_align_values_properties = do_not_align
 ij_yaml_autoinsert_sequence_marker = true
 ij_yaml_block_mapping_on_new_line = false
