--- a/.editorconfig
+++ b/.editorconfig
@@ -122,7 +122,6 @@ ij_vue_interpolation_new_line_before_end_delimiter = true
 ij_vue_interpolation_wrap = off
 ij_vue_keep_indents_on_empty_lines = false
 ij_vue_spaces_within_interpolation_expressions = true
-ij_vue_uniform_indent = true
 
 [.editorconfig]
 ij_editorconfig_align_group_field_declarations = false
@@ -498,6 +497,7 @@ ij_php_align_class_constants = false
 ij_php_align_group_field_declarations = false
 ij_php_align_inline_comments = true
 ij_php_align_key_value_pairs = true
+ij_php_align_match_arm_bodies = false
 ij_php_align_multiline_array_initializer_expression = true
 ij_php_align_multiline_binary_operation = false
 ij_php_align_multiline_chained_methods = false
@@ -506,6 +506,7 @@ ij_php_align_multiline_for = false
 ij_php_align_multiline_parameters = false
 ij_php_align_multiline_parameters_in_calls = false
 ij_php_align_multiline_ternary_operation = false
+ij_php_align_named_arguments = false
 ij_php_align_phpdoc_comments = false
 ij_php_align_phpdoc_param_names = false
 ij_php_anonymous_brace_style = end_of_line
@@ -537,7 +538,7 @@ ij_php_block_brace_style = end_of_line
 ij_php_call_parameters_new_line_after_left_paren = false
 ij_php_call_parameters_right_paren_on_new_line = false
 ij_php_call_parameters_wrap = normal
-ij_php_catch_on_new_line = true
+ij_php_catch_on_new_line = false
 ij_php_category_weight = 28
 ij_php_class_brace_style = next_line
 ij_php_comma_after_last_array_element = true
@@ -552,7 +553,7 @@ ij_php_extends_keyword_wrap = normal
 ij_php_extends_list_wrap = off
 ij_php_fields_default_visibility = protected
 ij_php_filesource_weight = 28
-ij_php_finally_on_new_line = true
+ij_php_finally_on_new_line = false
 ij_php_for_brace_force = always
 ij_php_for_statement_new_line_after_left_paren = false
 ij_php_for_statement_right_paren_on_new_line = false
@@ -562,9 +563,9 @@ ij_php_getters_setters_naming_style = camel_case
 ij_php_getters_setters_order_style = getters_first
 ij_php_global_weight = 28
 ij_php_group_use_wrap = on_every_item
-ij_php_if_brace_force = always
-ij_php_if_lparen_on_next_line = false
-ij_php_if_rparen_on_next_line = false
+ij_php_if_brace_force = if_multiline
+ij_php_if_lparen_on_next_line = true
+ij_php_if_rparen_on_next_line = true
 ij_php_ignore_weight = 28
 ij_php_import_sorting = alphabetic
 ij_php_indent_break_from_case = true
@@ -625,6 +626,7 @@ ij_php_see_weight = 1
 ij_php_since_weight = 28
 ij_php_sort_phpdoc_elements = true
 ij_php_space_after_colon = true
+ij_php_space_after_colon_in_enum_backed_type = true
 ij_php_space_after_colon_in_named_argument = true
 ij_php_space_after_colon_in_return_type = true
 ij_php_space_after_comma = true
@@ -639,6 +641,7 @@ ij_php_space_before_catch_parentheses = true
 ij_php_space_before_class_left_brace = true
 ij_php_space_before_closure_left_parenthesis = true
 ij_php_space_before_colon = true
+ij_php_space_before_colon_in_enum_backed_type = false
 ij_php_space_before_colon_in_named_argument = false
 ij_php_space_before_colon_in_return_type = false
 ij_php_space_before_comma = false
@@ -674,6 +677,7 @@ ij_php_spaces_around_equality_operators = true
 ij_php_spaces_around_logical_operators = true
 ij_php_spaces_around_multiplicative_operators = true
 ij_php_spaces_around_null_coalesce_operator = true
+ij_php_spaces_around_pipe_in_union_type = false
 ij_php_spaces_around_relational_operators = true
 ij_php_spaces_around_shift_operators = true
 ij_php_spaces_around_unary_operator = false
@@ -746,7 +750,6 @@ ij_html_space_after_tag_name = false
 ij_html_space_around_equality_in_attribute = false
 ij_html_space_inside_empty_tag = true
 ij_html_text_wrap = off
-ij_html_uniform_ident = false
 
 [{*.markdown,*.md}]
 ij_markdown_force_one_space_after_blockquote_symbol = true
