--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -8,7 +8,7 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ "7.2", "7.3", "7.4", "8.0" ]
+                php: [ "7.3", "7.4", "8.0" ]
 
         name: PHP ${{ matrix.php }}
 
@@ -22,9 +22,6 @@ jobs:
                     php-version: ${{ matrix.php }}
                     extensions: curl, mbstring, zip, pcntl, pdo, pdo_sqlite, iconv, bcmath
                     coverage: none
-
-            -   name: Composer self update
-                run: composer self-update
 
             -   name: Install dependencies
                 run: composer update --prefer-stable --prefer-dist --no-progress --no-interaction
