Work on events started

--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,11 @@
         "andrey-helldar/laravel-support": "^2.0",
         "andrey-helldar/support": "^4.5",
         "guzzlehttp/guzzle": "^6.5|^7.0",
+        "illuminate/broadcasting": "^6.0|^7.0|^8.0",
         "illuminate/console": "^6.0|^7.0|^8.0",
         "illuminate/contracts": "^6.0|^7.0|^8.0",
         "illuminate/database": "^6.0|^7.0|^8.0",
+        "illuminate/queue": "^6.0|^7.0|^8.0",
         "illuminate/support": "^6.0|^7.0|^8.0",
         "psr/http-message": "^1.0",
         "ramsey/uuid": "^3.7|^4.0",
