--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,18 @@
 * text=auto
 
 .github/ export-ignore
+.run/ export-ignore
+
+docs/ export-ignore
 tests/ export-ignore
 
 .codecov.yml export-ignore
 .editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
-.scrutinizer.yml export-ignore
 .styleci.yml export-ignore
 
+.env.example export-ignore
+
+phpunit.php export-ignore
 phpunit.xml export-ignore
