--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-json": "*",
-        "andrey-helldar/contracts": "^1.16",
+        "andrey-helldar/contracts": "^1.17",
         "andrey-helldar/laravel-support": "^2.0",
         "andrey-helldar/simple-data-transfer-object": "^1.0",
         "andrey-helldar/support": "^4.6",
@@ -46,7 +46,8 @@
     "autoload": {
         "psr-4": {
             "Helldar\\Cashier\\": "src"
-        }
+        },
+        "classmap": ["polyfill"]
     },
     "autoload-dev": {
         "psr-4": {
