--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "andrey-helldar/laravel-support": "^2.0",
         "andrey-helldar/simple-data-transfer-object": "^1.0",
         "andrey-helldar/support": "^4.6",
+        "doctrine/dbal": "^2.6|^3.0",
         "guzzlehttp/guzzle": "^6.5|^7.0",
         "illuminate/broadcasting": "^6.0|^7.0|^8.0",
         "illuminate/console": "^6.0|^7.0|^8.0",
