--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,4 @@
+patreon: andrey_helldar
 tidelift: "packagist/andrey-helldar/cashier"
 open_collective: "laravel-cashier-provider"
 custom: [ "https://paypal.me/helldar", "https://yoomoney.ru/to/410012608840929" ]
