--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 patreon: andrey_helldar
-open_collective: "laravel-cashier-provider"
+open_collective: "cashier-provider"
 custom: [ "https://paypal.me/helldar", "https://yoomoney.ru/to/410012608840929" ]
