--- a/.github/workflows/laravel-6.yml
+++ b/.github/workflows/laravel-6.yml
@@ -1,4 +1,4 @@
-name: "Laravel 8"
+name: "Laravel 6"
 on: [ push ]
 
 jobs:
@@ -8,8 +8,8 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ "7.3", "7.4", "8.0", "8.1" ]
-                laravel: [ "8.0" ]
+                php: [ "7.3", "7.4", "8.0" ]
+                laravel: [ "6.0" ]
 
         name: PHP ${{ matrix.php }}
 
