--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "ext-json": "*",
         "doctrine/dbal": "^2.6 || ^3.0",
         "dragon-code/contracts": "^2.10",
-        "dragon-code/laravel-cache": "^2.5",
+        "dragon-code/laravel-cache": "^2.7",
         "dragon-code/laravel-support": "^3.1",
         "dragon-code/simple-data-transfer-object": "^2.0",
         "dragon-code/support": "^5.2",
@@ -47,6 +47,7 @@
     "suggest": {
         "cashier-provider/cash": "Driver for managing cash payments in the Cashier Provider ecosystem",
         "cashier-provider/sber-qr": "Driver for payment with QR codes via Sber",
+        "cashier-provider/tinkoff-online": "Driver for online payments via Tinkoff",
         "cashier-provider/tinkoff-qr": "Driver for payment with QR codes via Tinkoff"
     },
     "minimum-stability": "stable",
@@ -54,10 +55,7 @@
     "autoload": {
         "psr-4": {
             "CashierProvider\\Core\\": "src"
-        },
-        "classmap": [
-            "polyfill"
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
