--- a/composer.json
+++ b/composer.json
@@ -23,32 +23,26 @@
         "php": "^7.3 || ^8.0",
         "ext-json": "*",
         "doctrine/dbal": "^2.6 || ^3.0",
-        "dragon-code/contracts": "^2.12.1",
-        "dragon-code/laravel-cache": "^2.7",
-        "dragon-code/laravel-support": "^3.1",
-        "dragon-code/simple-data-transfer-object": "^2.0",
+        "dragon-code/contracts": "^2.16",
+        "dragon-code/laravel-cache": "^2.11.2",
+        "dragon-code/laravel-support": "^3.3.2",
+        "dragon-code/simple-data-transfer-object": "^2.1",
         "dragon-code/support": "^5.2",
         "guzzlehttp/guzzle": "^6.5 || ^7.0",
-        "illuminate/broadcasting": "^6.0 || ^7.0 || ^8.0",
-        "illuminate/console": "^6.0 || ^7.0 || ^8.0",
-        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0",
-        "illuminate/database": "^6.0 || ^7.0 || ^8.0",
-        "illuminate/queue": "^6.0 || ^7.0 || ^8.0",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0",
+        "illuminate/broadcasting": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/console": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/queue": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "psr/http-message": "^1.0",
         "ramsey/uuid": "^3.7 || ^4.0",
-        "symfony/http-kernel": "^4.0 || ^5.0"
+        "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0",
+        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0 || ^7.0",
         "phpunit/phpunit": "^9.0",
-        "symfony/var-dumper": "^4.0 || ^5.0"
-    },
-    "suggest": {
-        "cashier-provider/cash": "Driver for managing cash payments in the Cashier Provider ecosystem",
-        "cashier-provider/sber-qr": "Driver for payment with QR codes via Sber",
-        "cashier-provider/tinkoff-online": "Driver for online payments via Tinkoff",
-        "cashier-provider/tinkoff-qr": "Driver for payment with QR codes via Tinkoff"
+        "symfony/var-dumper": "^4.0 || ^5.0 || ^6.0"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
