--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
         "ext-json": "*",
         "doctrine/dbal": "^2.6 || ^3.0",
         "dragon-code/contracts": "^2.16",
-        "dragon-code/laravel-cache": "^2.11.2",
+        "dragon-code/laravel-cache": "^2.12",
         "dragon-code/laravel-support": "^3.3.2",
-        "dragon-code/simple-data-transfer-object": "^2.1",
+        "dragon-code/simple-dto": "^2.2",
         "dragon-code/support": "^5.2",
         "guzzlehttp/guzzle": "^6.5 || ^7.0",
         "illuminate/broadcasting": "^6.0 || ^7.0 || ^8.0 || ^9.0",
