--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "illuminate/queue": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "lmc/http-constants": "^1.2",
         "psr/http-message": "^1.0",
         "ramsey/uuid": "^3.7 || ^4.0",
         "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0"
