--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,12 @@
         "php": "^7.3 || ^8.0",
         "ext-json": "*",
         "doctrine/dbal": "^2.6 || ^3.0",
-        "dragon-code/contracts": "^2.16",
+        "dragon-code/contracts": "^2.18",
         "dragon-code/laravel-cache": "^2.12",
         "dragon-code/laravel-support": "^3.3.2",
         "dragon-code/simple-dto": "^2.2",
         "dragon-code/support": "^5.2",
+        "fig/http-message-util": "^1.1",
         "guzzlehttp/guzzle": "^6.5 || ^7.0",
         "illuminate/broadcasting": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "illuminate/console": "^6.0 || ^7.0 || ^8.0 || ^9.0",
