--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -1,4 +1,5 @@
-name: "Laravel 7"
+name: phpunit
+
 on: [ push ]
 
 jobs:
@@ -8,10 +9,10 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ "7.3", "7.4", "8.0" ]
-                laravel: [ "7.0" ]
+                php: [ "8.1", "8.2" ]
+                laravel: [ "9.0", "10.0" ]
 
-        name: PHP ${{ matrix.php }}
+        name: PHP ${{ matrix.php }}, Laravel ${{ matrix.laravel }}
 
         services:
             mysql:
@@ -35,7 +36,7 @@ jobs:
                     coverage: none
 
             -   name: Install dependencies
-                run: composer require laravel/framework:^${{ matrix.laravel }}
+                run: composer require --dev laravel/framework:^${{ matrix.laravel }}
 
             -   name: Execute tests
                 run: sudo vendor/bin/phpunit
