--- a/composer.json
+++ b/composer.json
@@ -39,42 +39,42 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0",
+        "php": "^8.1",
         "ext-json": "*",
-        "doctrine/dbal": "^2.6 || ^3.0",
+        "doctrine/dbal": "^3.6",
         "dragon-code/contracts": "^2.18",
-        "dragon-code/laravel-cache": "^2.12",
-        "dragon-code/laravel-support": "^3.3.2",
-        "dragon-code/simple-dto": "^2.2",
-        "dragon-code/support": "^5.2",
+        "dragon-code/laravel-cache": "^3.3",
+        "dragon-code/laravel-support": "^3.5",
+        "dragon-code/support": "^6.11",
         "fig/http-message-util": "^1.1",
-        "guzzlehttp/guzzle": "^6.5 || ^7.0",
-        "illuminate/broadcasting": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/console": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/queue": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "guzzlehttp/guzzle": "^7.5",
+        "illuminate/broadcasting": "^9.0 || ^10.0",
+        "illuminate/console": "^9.0 || ^10.0",
+        "illuminate/contracts": "^9.0 || ^10.0",
+        "illuminate/database": "^9.0 || ^10.0",
+        "illuminate/queue": "^9.0 || ^10.0",
+        "illuminate/support": "^9.0 || ^10.0",
         "lmc/http-constants": "^1.2",
         "psr/http-message": "^1.0",
-        "ramsey/uuid": "^3.7 || ^4.0",
-        "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0"
+        "ramsey/uuid": "^4.7",
+        "spatie/laravel-data": "^3.1",
+        "symfony/http-kernel": "^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0 || ^7.0",
-        "phpunit/phpunit": "^9.0",
-        "symfony/var-dumper": "^4.0 || ^5.0 || ^6.0"
+        "orchestra/testbench": "^7.0 || ^8.0",
+        "phpunit/phpunit": "^10.0",
+        "symfony/var-dumper": "^6.0"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "CashierProvider\\Core\\": "src"
+            "CashierProvider\\Core\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests"
+            "Tests\\": "tests/"
         }
     },
     "config": {
