--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
+        "archtechx/enums": "^0.3.2",
         "doctrine/dbal": "^3.6",
         "dragon-code/laravel-support": "^3.5",
         "dragon-code/support": "^6.11",
