--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -9,27 +9,16 @@ permissions: write-all
 jobs:
     check:
         if: ${{ ! (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
-
-        runs-on: ubuntu-latest
-
-        steps:
-            -   name: Checkout code
-                uses: actions/checkout@v3
-
-            -   name: Checking PHP Syntax
-                uses: TheDragonCode/codestyler@v2.6.2
+        
+        uses: TheDragonCode/.github/.github/workflows/code-style.yml@main
+        with:
+            token: ${{ secrets.COMPOSER_TOKEN }}
+            fix: false
     
     fix:
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         
-        runs-on: ubuntu-latest
-
-        steps:
-            -   name: Checkout code
-                uses: actions/checkout@v3
-
-            -   name: Checking PHP Syntax
-                uses: TheDragonCode/codestyler@v2.6.2
-                with:
-                    github_token: ${{ secrets.COMPOSER_TOKEN }}
-                    fix: true
+        uses: TheDragonCode/.github/.github/workflows/code-style.yml@main
+        with:
+            token: ${{ secrets.COMPOSER_TOKEN }}
+            fix: true
