--- a/composer.json
+++ b/composer.json
@@ -42,11 +42,11 @@
         "php": "^8.1",
         "ext-json": "*",
         "archtechx/enums": "^0.3.2",
-        "doctrine/dbal": "^3.6",
+        "doctrine/dbal": "^3.6.3",
         "dragon-code/laravel-support": "^3.5",
-        "dragon-code/support": "^6.11",
-        "fig/http-message-util": "^1.1",
-        "guzzlehttp/guzzle": "^7.5",
+        "dragon-code/support": "^6.11.2",
+        "fig/http-message-util": "^1.1.5",
+        "guzzlehttp/guzzle": "^7.7",
         "illuminate/broadcasting": "^9.0 || ^10.0",
         "illuminate/console": "^9.0 || ^10.0",
         "illuminate/contracts": "^9.0 || ^10.0",
@@ -54,15 +54,15 @@
         "illuminate/queue": "^9.0 || ^10.0",
         "illuminate/support": "^9.0 || ^10.0",
         "lmc/http-constants": "^1.2",
-        "psr/http-message": "^1.0",
-        "ramsey/uuid": "^4.7",
-        "spatie/laravel-data": "^3.1",
-        "symfony/http-kernel": "^6.2"
+        "psr/http-message": "^1.0 || ^2.0",
+        "ramsey/uuid": "^4.7.4",
+        "spatie/laravel-data": "^3.6",
+        "symfony/http-kernel": "^6.3"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0 || ^8.0",
-        "phpunit/phpunit": "^10.0",
-        "symfony/var-dumper": "^6.2"
+        "orchestra/testbench": "^7.0 || ^8.5.8",
+        "phpunit/phpunit": "^10.2.2",
+        "symfony/var-dumper": "^6.3"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
@@ -80,8 +80,7 @@
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "dragon-code/codestyler": true,
-            "ergebnis/composer-normalize": true,
-            "friendsofphp/php-cs-fixer": true
+            "ergebnis/composer-normalize": true
         },
         "preferred-install": "dist",
         "sort-packages": true
