--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "illuminate/support": "^9.0 || ^10.0",
         "lmc/http-constants": "^1.2",
         "psr/http-message": "^1.0 || ^2.0",
+        "psr/log": "^3.0",
         "ramsey/uuid": "^4.7.4",
         "spatie/laravel-data": "^3.6",
         "symfony/http-kernel": "^6.3"
