--- a/composer.json
+++ b/composer.json
@@ -42,26 +42,20 @@
         "php": "^8.1",
         "ext-json": "*",
         "archtechx/enums": "^0.3.2",
-        "doctrine/dbal": "^3.6.3",
-        "dragon-code/laravel-support": "^3.5",
-        "dragon-code/support": "^6.11.2",
-        "fig/http-message-util": "^1.1.5",
-        "guzzlehttp/guzzle": "^7.7",
-        "illuminate/broadcasting": "^9.0 || ^10.0",
-        "illuminate/console": "^9.0 || ^10.0",
-        "illuminate/contracts": "^9.0 || ^10.0",
-        "illuminate/database": "^9.0 || ^10.0",
-        "illuminate/queue": "^9.0 || ^10.0",
-        "illuminate/support": "^9.0 || ^10.0",
+        "doctrine/dbal": "^3.6",
+        "dragon-code/support": "^6.11",
+        "fig/http-message-util": "^1.1",
+        "illuminate/console": "^10.13",
+        "illuminate/database": "^10.13",
+        "illuminate/queue": "^10.13",
+        "illuminate/support": "^10.13",
         "lmc/http-constants": "^1.2",
-        "psr/http-message": "^1.0 || ^2.0",
+        "psr/http-message": "^2.0",
         "psr/log": "^3.0",
-        "ramsey/uuid": "^4.7.4",
-        "spatie/laravel-data": "^3.6",
-        "symfony/http-kernel": "^6.3"
+        "spatie/laravel-data": "^3.6"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0 || ^8.5.8",
+        "orchestra/testbench": "^8.5.8",
         "phpunit/phpunit": "^10.2.2",
         "symfony/var-dumper": "^6.3"
     },
