--- a/composer.json
+++ b/composer.json
@@ -43,25 +43,25 @@
         "ext-json": "*",
         "doctrine/dbal": "^2.6 || ^3.0",
         "dragon-code/contracts": "^2.18",
-        "dragon-code/laravel-cache": "^2.12",
+        "dragon-code/laravel-cache": "^3.8",
         "dragon-code/laravel-support": "^3.3.2",
         "dragon-code/simple-dto": "^2.2",
-        "dragon-code/support": "^5.2",
+        "dragon-code/support": "^6.11.2",
         "fig/http-message-util": "^1.1",
         "guzzlehttp/guzzle": "^6.5 || ^7.0",
-        "illuminate/broadcasting": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/console": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/queue": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/broadcasting": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/console": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/queue": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
         "lmc/http-constants": "^1.2",
-        "psr/http-message": "^1.0",
+        "psr/http-message": "^1.0 || ^2.0",
         "ramsey/uuid": "^3.7 || ^4.0",
         "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0 || ^7.0",
+        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0 || ^7.0 || ^8.0",
         "phpunit/phpunit": "^9.0",
         "symfony/var-dumper": "^4.0 || ^5.0 || ^6.0"
     },
