--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "require": {
         "php": "^8.1",
         "archtechx/enums": "^0.3",
-        "dragon-code/laravel-cache": "^3.8",
+        "dragon-code/support": "^6.11",
         "illuminate/console": "^10.0",
         "illuminate/database": "^10.0",
         "illuminate/support": "^10.0",
