--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "illuminate/console": "^10.0",
         "illuminate/database": "^10.0",
         "illuminate/support": "^10.0",
+        "nesbot/carbon": "^2.68",
         "spatie/laravel-data": "^3.7",
         "symfony/console": "^6.3"
     },
