--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "cashier-provider/core",
     "description": "Cashier provides an expressive, fluent interface to manage billing services.",
-    "type": "library",
     "license": "MIT",
+    "type": "library",
     "keywords": [
         "bank",
         "billing",
@@ -20,51 +20,49 @@
         "source": "https://github.com/cashier-provider/core"
     },
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.3 || ^8.0",
         "ext-json": "*",
-        "dragon-code/contracts": "^1.22",
-        "andrey-helldar/laravel-support": "^2.0",
-        "andrey-helldar/simple-data-transfer-object": "^1.0",
-        "andrey-helldar/support": "^4.6",
-        "doctrine/dbal": "^2.6|^3.0",
-        "guzzlehttp/guzzle": "^6.5|^7.0",
-        "illuminate/broadcasting": "^6.0|^7.0|^8.0",
-        "illuminate/console": "^6.0|^7.0|^8.0",
-        "illuminate/contracts": "^6.0|^7.0|^8.0",
-        "illuminate/database": "^6.0|^7.0|^8.0",
-        "illuminate/queue": "^6.0|^7.0|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0",
+        "doctrine/dbal": "^2.6 || ^3.0",
+        "dragon-code/contracts": "^2.16",
+        "dragon-code/laravel-cache": "^2.11.2",
+        "dragon-code/laravel-support": "^3.3.2",
+        "dragon-code/simple-data-transfer-object": "^2.1",
+        "dragon-code/support": "^5.2",
+        "guzzlehttp/guzzle": "^6.5 || ^7.0",
+        "illuminate/broadcasting": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/console": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/queue": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "psr/http-message": "^1.0",
-        "ramsey/uuid": "^3.7|^4.0",
-        "symfony/http-kernel": "^4.3.4|^5.0"
+        "ramsey/uuid": "^3.7 || ^4.0",
+        "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0|^5.0|^6.0",
+        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0 || ^7.0",
         "phpunit/phpunit": "^9.0",
-        "symfony/var-dumper": "^4.3.4|^5.0"
+        "symfony/var-dumper": "^4.0 || ^5.0 || ^6.0"
     },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "CashierProvider\\Core\\": "src"
-        },
-        "classmap": ["polyfill"]
+        }
     },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests"
         }
     },
-    "suggest": {
-        "cashier-provider/cash": "Driver for managing cash payments in the Cashier Provider ecosystem",
-        "cashier-provider/sber-qr": "Driver for payment with QR codes via Sber",
-        "cashier-provider/tinkoff-qr": "Driver for payment with QR codes via Tinkoff"
-    },
     "config": {
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
+        },
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "stable",
-    "prefer-stable": true,
     "extra": {
         "laravel": {
             "providers": [
