--- a/.github/workflows/close-pull-request.yml
+++ b/.github/workflows/close-pull-request.yml
@@ -4,10 +4,11 @@ on:
     pull_request_target:
         types: [ opened ]
 
+permissions:
+    actions: write
+    checks: write
+    pull-requests: write
+
 jobs:
-    run:
-        runs-on: ubuntu-latest
-        steps:
-            -   uses: superbrothers/close-pull-request@v3
-                with:
-                    comment: "Thank you for your pull request. However, you have submitted this PR on the Cashier Provider organization which is a read-only sub split of `cashier-provider/foundation`. Please submit your PR on the https://github.com/cashier-provider/foundation repository.<br><br>Thanks!"
+    PR:
+        uses: cashier-provider/.github/.github/workflows/close-pull-request.yml@main
