--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,15 @@
     ],
     "require": {
         "php": "^8.1",
+        "ext-json": "*",
         "archtechx/enums": "^0.3.2",
         "dragon-code/laravel-support": "^3.6",
         "dragon-code/support": "^6.11.2",
+        "illuminate/bus": "*",
         "illuminate/console": "^10.14",
-        "illuminate/database": "^10.14",
+        "illuminate/contracts": "*",
+        "illuminate/database": "*",
+        "illuminate/queue": "*",
         "illuminate/support": "^10.14",
         "nesbot/carbon": "^2.68.1",
         "spatie/laravel-data": "^3.7",
