Added updating README.md files according to a given template

--- a/composer.json
+++ b/composer.json
@@ -84,6 +84,7 @@
                 "Cashbox\\Core\\Providers\\RateLimiterServiceProvider"
             ]
         },
+        "title": "Core",
         "thanks": [
             {
                 "name": "dragon-code/laravel-support",
